@@ -1,3 +1,4 @@
+* Fix WINDOW and HAVING params order in Select
 * Add window functions
 * Add filter and within group to aggregate
 * Add limitstyle with 'offset' and 'limit'
